--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
           Search
         </button>
       </div>
+      <!-- spinner-added -->
+      <div id="spinner-added" class="d-flex justify-content-center">
+        <div class="spinner-border text-success d-none" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+      </div>
+
+      <!--  -->
       <section class="images">
         <div
           class="justify-content-around align-items-center mt-3 gallery-header mb-2"
