--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       </div>
       <!-- spinner-added -->
       <div id="spinner-added" class="d-flex justify-content-center">
-        <div class="spinner-border text-success d-none" role="status">
-          <span class="visually-hidden">Loading...</span>
+        <div class="spinner-border d-none text-success" role="status">
+          <span>Loading...</span>
         </div>
       </div>
 
@@ -65,7 +65,7 @@
             Create slider
           </button>
         </div>
-        <p id="yo"></p>
+        <!-- <p id="yo"></p> -->
         <div class="row gallery"></div>
       </section>
 
