--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         </button>
       </div>
       <!-- spinner-added -->
-      <div id="spinner-added" class="d-flex justify-content-center">
+      <div id="spinner-added" class="d-flef justify-content-center">
         <div class="spinner-border d-none text-success" role="status">
-          <span>Loading...</span>
+          <span></span>
         </div>
       </div>
 
@@ -65,7 +65,7 @@
             Create slider
           </button>
         </div>
-        <!-- <p id="yo"></p> -->
+
         <div class="row gallery"></div>
       </section>
 
